Changed Scrollbar style and fixed tooltip span

--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
 @tailwind base;
+
+:root {
+    --background: rgb(54 57 63);
+    --primary: rgb(226 232 240);
+    background-color: var(--background);
+}
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary) var(--background);
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: var(--background);
+    border-radius: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
+    border-radius: 14px;
+    border: 3px solid var(--background);
+  }
+
 @tailwind components;
 @tailwind utilities;
 
